--- a/docker/Dockerfile.slim
+++ b/docker/Dockerfile.slim
@@ -14,4 +14,4 @@ USER caido
 EXPOSE 8080
 
 ENTRYPOINT ["caido-cli"]
-CMD ["--no-renderer-sandbox", "--listen", "0.0.0.0:8080"]
+CMD ["--no-renderer-sandbox", "--no-open", "--listen", "0.0.0.0:8080"]
